syntax = "proto3";

package billing.v1;

option go_package = "github.com/haunted-saas/billing-service/proto/billing/v1;billingv1";

import "google/protobuf/timestamp.proto";

service BillingService {
  // Plan Management
  rpc CreatePlan(CreatePlanRequest) returns (CreatePlanResponse);
  rpc GetPlan(GetPlanRequest) returns (GetPlanResponse);
  rpc ListPlans(ListPlansRequest) returns (ListPlansResponse);
  rpc UpdatePlan(UpdatePlanRequest) returns (UpdatePlanResponse);
  rpc DeactivatePlan(DeactivatePlanRequest) returns (DeactivatePlanResponse);
  
  // Subscription Management
  rpc CreateCheckoutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
  rpc GetSubscription(GetSubscriptionRequest) returns (GetSubscriptionResponse);
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);
  rpc UpdateSubscription(UpdateSubscriptionRequest) returns (UpdateSubscriptionResponse);
  rpc CreateCustomerPortalSession(CreateCustomerPortalSessionRequest) returns (CreateCustomerPortalSessionResponse);
  
  // Usage & Billing
  rpc GetUpcomingInvoice(GetUpcomingInvoiceRequest) returns (GetUpcomingInvoiceResponse);
  rpc ListInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);
}

// Plan Messages
message CreatePlanRequest {
  string name = 1;
  int64 price_cents = 2;
  string currency = 3;
  string billing_interval = 4; // "month" or "year"
  map<string, string> features = 5;
  string created_by_user_id = 6;
  int32 trial_days = 7; // Optional trial period
}

message CreatePlanResponse {
  Plan plan = 1;
}

message GetPlanRequest {
  string plan_id = 1;
}

message GetPlanResponse {
  Plan plan = 1;
}

message ListPlansRequest {
  bool active_only = 1;
}

message ListPlansResponse {
  repeated Plan plans = 1;
}

message UpdatePlanRequest {
  string plan_id = 1;
  string name = 2;
  string description = 3;
  map<string, string> features = 4;
}

message UpdatePlanResponse {
  Plan plan = 1;
}

message DeactivatePlanRequest {
  string plan_id = 1;
}

message DeactivatePlanResponse {
  bool success = 1;
}

message Plan {
  string id = 1;
  string name = 2;
  int64 price_cents = 3;
  string currency = 4;
  string billing_interval = 5;
  map<string, string> features = 6;
  bool is_active = 7;
  string stripe_price_id = 8;
  string stripe_product_id = 9;
  int32 trial_days = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// Subscription Messages
message CreateCheckoutSessionRequest {
  string team_id = 1;
  string plan_id = 2;
  string success_url = 3;
  string cancel_url = 4;
  string customer_email = 5; // Optional
}

message CreateCheckoutSessionResponse {
  string checkout_url = 1;
  string session_id = 2;
}

message GetSubscriptionRequest {
  string team_id = 1;
}

message GetSubscriptionResponse {
  Subscription subscription = 1;
}

message CancelSubscriptionRequest {
  string team_id = 1;
  string requesting_user_id = 2;
  bool immediate = 3; // If true, cancel immediately; otherwise at period end
}

message CancelSubscriptionResponse {
  string cancellation_date = 1;
  Subscription subscription = 2;
}

message UpdateSubscriptionRequest {
  string team_id = 1;
  string new_plan_id = 2;
  string requesting_user_id = 3;
}

message UpdateSubscriptionResponse {
  Subscription subscription = 1;
  int64 next_billing_amount_cents = 2;
  int64 proration_amount_cents = 3;
}

message CreateCustomerPortalSessionRequest {
  string team_id = 1;
  string return_url = 2;
}

message CreateCustomerPortalSessionResponse {
  string portal_url = 1;
}

message Subscription {
  string id = 1;
  string team_id = 2;
  string plan_id = 3;
  string status = 4; // "active", "canceled", "past_due", "incomplete", "trialing", "unpaid"
  string stripe_subscription_id = 5;
  string stripe_customer_id = 6;
  google.protobuf.Timestamp current_period_start = 7;
  google.protobuf.Timestamp current_period_end = 8;
  google.protobuf.Timestamp cancel_at = 9;
  google.protobuf.Timestamp canceled_at = 10;
  google.protobuf.Timestamp trial_end = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  Plan plan = 14;
}

// Invoice Messages
message GetUpcomingInvoiceRequest {
  string team_id = 1;
}

message GetUpcomingInvoiceResponse {
  Invoice invoice = 1;
}

message ListInvoicesRequest {
  string team_id = 1;
  int32 limit = 2;
}

message ListInvoicesResponse {
  repeated Invoice invoices = 1;
}

message Invoice {
  string id = 1;
  int64 amount_due = 2;
  int64 amount_paid = 3;
  string currency = 4;
  string status = 5;
  google.protobuf.Timestamp created = 6;
  google.protobuf.Timestamp due_date = 7;
  string invoice_pdf = 8;
  string hosted_invoice_url = 9;
}
